Fix: gap between list items after more-button click, font inheritance, video-card-title overflow, Add: scrollbar to content__list, currentColor to variables

--- a/styles/components/content.css
+++ b/styles/components/content.css
@@ -11,11 +11,11 @@
     flex-direction: column;
     flex-grow: 1;
     gap: 26px;
+    font-family: var(--secondary-font-family), sans-serif;
+    font-weight: var(--bold-font-weight);
 }
 
 .title {
-    font-family: var(--secondary-font-family), sans-serif;
-    font-weight: var(--bold-font-weight);
     font-size: var(--enormous-font-size);
     line-height: var(--smaller-line-height);
     text-transform: uppercase;
@@ -30,18 +30,17 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    gap: 30px;
     overflow-y: auto;
+    overflow-x: hidden;
     block-size: 298px;
-    scrollbar-width: none;
-}
-
-.content__list::-webkit-scrollbar {
-    display: none;
 }
 
 .content__list-item {
     padding: 2px;
+}
+
+.content__list-item:not(:last-of-type) {
+    margin-bottom: 30px;
 }
 
 .content__card-link {
@@ -82,14 +81,17 @@
     flex-direction: column;
     flex-grow: 1;
     gap: 6px;
+    max-inline-size: 200px;
+    inline-size: 100%;
 }
 
 .content__video-card-title {
-    font-family: var(--secondary-font-family), sans-serif;
-    font-weight: var(--bold-font-weight);
     font-size: var(--large-font-size);
     line-height: var(--standard-line-height);
     text-transform: uppercase;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .content__video-card-description {
@@ -98,7 +100,6 @@
     font-size: var(--medium-font-size);
     line-height: var(--small-line-height);
     word-wrap: break-word;
-    max-inline-size: 200px;
 }
 
 .content__video-card-thumbnail {
