--- a/styles/global/variables.css
+++ b/styles/global/variables.css
@@ -2,7 +2,7 @@
     /* Sizes */
     --main-inline-size: 1200px;
     --main-block-size: 100%;
-    --max-width-large: 1140px;
+    --max-width-large: 1150px;
 
     /* Fonts */
     --primary-font-family: 'Fira Sans Condensed', 'Helvetica', 'Arial';
@@ -26,7 +26,7 @@
     --secondary-font-color: #ffffffB2;
 
     /* Borders */
-    --standard-border: 1px solid var(--primary-font-color);
+    --standard-border: 1px solid currentColor;
     --dark-border: 1px solid var(--dark-color);
     --outline-offset: 1px;
 }
